[tool.poetry]
name = "icon-service-base"
version = "0.1.0"
description = "Repository storing the code that is common to all icon services."
authors = ["Mose Mueller <mosmuell@ethz.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "icon_service_base" }]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.0"
influxdb-client = "^1.36.1"
sqlmodel = "^0.0.8"
confz = "^2.0.0"
psycopg2-binary = "^2.9.6"
pydase = "0.1.0"
tiqi-rpc = {git = "ssh://git@gitlab.phys.ethz.ch/tiqi-projects/tiqi-rpc-python.git"}

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
flake8 = "^5.0.4"
flake8-use-fstring = "^1.4"
flake8-functions = "^0.0.7"
flake8-comprehensions = "^3.11.1"
flake8-pep585 = "^0.1.7"
flake8-pep604 = "^0.1.0"
flake8-eradicate = "^1.4.0"

[tool.pyright]
include = ["icon_service_base"]
exclude = ["**/node_modules", "**/__pycache__", "documentation"]
venvPath = "."
venv = ".venv"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
reportUnknownMemberType = true

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
